# zsh-force-alias

./: Cargo.toml  README.md  architecture_notes.md
src/: alias.rs  client.rs  request_types.rs  server.rs  util.rs
