[package]
authors = ["Marcus Buffett <marcusbuffett@me.com>"]
name = "zsh-force-alias"
version = "0.1.0"

[[bin]]
name = "force-alias-server"
path = "src/server.rs"

[[bin]]
name = "force-alias-client"
path = "src/client.rs"

[dependencies]
bodyparser = "*"
hyper = "0.9.4"
iron = "0.3.0"
lazy_static = "0.2.1"
router = "0.1.1"
rustc-serialize = "*"
serde = "*"
serde_json = "0.7.0"
serde_macros = "*"
argparse = "*"
