[package]
authors = ["Marcus Buffett <marcusbuffett@me.com>"]
name = "zsh-force-alias"
version = "0.1.0"

[[bin]]
name = "force-alias-server"
path = "src/server.rs"

[[bin]]
name = "force-alias-client"
path = "src/client.rs"

[dependencies]
bodyparser = "0.4.0"
hyper = "0.9.10"
iron = "0.4.0"
lazy_static = "0.2.1"
router = "0.2.0"
rustc-serialize = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
argparse = "*"
